--- a/autoencoder_fashion_MNIST_clustering.ipynb
+++ b/autoencoder_fashion_MNIST_clustering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM2UZrwxD1QvrMXhZX1qwcP",
+      "authorship_tag": "ABX9TyPYgrQqHDux6yNVLZe/RD6w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/MatousE/fashion-clustering/blob/main/autoencoder_fashion_MNIST_clustering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Install Dependencies"
+      ],
+      "metadata": {
+        "id": "_zdyW3tqbwiq"
+      }
     },
     {
       "cell_type": "code",
@@ -60,6 +69,7 @@
       "source": [
         "!pip install pyclesperanto\n",
         "!pip install umap-learn\n",
+        "import umap\n",
         "\n",
         "import pyclesperanto as cle\n",
         "import matplotlib.pyplot as plt\n",
@@ -73,6 +83,15 @@
         "from tensorflow.keras.datasets import fashion_mnist\n",
         "from tensorflow.keras.models import Model"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Downloading and formatting train and test data"
+      ],
+      "metadata": {
+        "id": "yKH8e9JHb2x1"
+      }
     },
     {
       "cell_type": "code",
@@ -103,6 +122,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Defining autoencoder model and training"
+      ],
+      "metadata": {
+        "id": "iUWEjqk6b_ow"
+      }
     },
     {
       "cell_type": "code",
@@ -184,14 +212,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Defining bottleneck model and obtaining predictions"
+      ],
+      "metadata": {
+        "id": "5ggDVY6bcHuR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "bottleneck_output = model_full.get_layer('bottleneck_layer').output\n",
         "model_bottleneck = Model(inputs = model_full.input, outputs = bottleneck_output)\n",
         "\n",
-        "bottleneck_predictions = model_bottleneck.predict(x_test)\n",
-        "\n",
-        "# bottleneck_predictions = bottleneck_predictions[:,:,:,0]\n"
+        "bottleneck_predictions = model_bottleneck.predict(x_test)"
       ],
       "metadata": {
         "colab": {
@@ -212,16 +247,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## UMAP clustering on bottleneck output"
+      ],
+      "metadata": {
+        "id": "eVtOY1iacPpb"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import umap\n",
+        "predictions_reshaped = np.asarray([x.flatten() for x in bottleneck_predictions])\n",
         "\n",
-        "test = np.asarray([x.flatten() for x in bottleneck_predictions])\n",
-        "\n",
-        "print(test.shape)\n",
+        "print(predictions_reshaped.shape)\n",
         "\n",
         "reducer = umap.UMAP()\n",
-        "embedding = reducer.fit_transform(test)\n",
+        "embedding = reducer.fit_transform(predictions_reshaped)\n",
         "\n",
         "print(embedding.shape)"
       ],
@@ -243,6 +285,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Visualise Clusters"
+      ],
+      "metadata": {
+        "id": "aCDKC7mHcsR2"
+      }
     },
     {
       "cell_type": "code",
@@ -280,15 +331,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "6gz4Gp7GY5fh"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
